# ToyEngine

./: .gitignore  .gitmodules  BasicMesh.hlsl  CMakeLists.txt  CMakeSettings.json  D3D11GraphicsDevice.cpp  D3D11GraphicsDevice.h  D3D11Types.h  EnginePCH.h  Game.cpp  Game.h  LICENSE  Main.cpp  README.md  Renderer.cpp  Renderer.h  ToyEngine.sln  ToyEngine.vcxproj  ToyEngine.vcxproj.filters  WindowsHeaders.h  config.json  imgui.ini
Assets/: BasicMeshDX12.hlsl  Thumbs.db  config.json  cubes.json  sponza.json
CMake/: FindD3D12.cmake
Shaders/: Phong.hlsl
src/: Camera.h  ConstantRotation.h  DebugSystem.cpp  DebugSystem.h  EngineCore.h  FPSCameraSystem.cpp  FPSCameraSystem.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  JsonUtils.h  LevelLoader.cpp  LevelLoader.h  Main.cpp  Math.h  NameComponent.h  RenderingSystem.cpp  RenderingSystem.h  RotateObjectSystem.cpp  RotateObjectSystem.h  SimpleMath.cpp  SimpleMath.h  SimpleMath.inl  Transform.h  WindowsHeaders.h
src/AssetManagement/: LevelLoader.cpp  LevelLoader.h  OBJModelLoader.cpp  OBJModelLoader.h
src/Core/: Asset.cpp  Asset.h  AssetCache.cpp  AssetCache.h  ConfigSystem.cpp  ConfigSystem.h  Logger.cpp  Logger.h
src/Core/Allocators/: VariableSizeMemoryBlockAllocator.cpp  VariableSizeMemoryBlockAllocator.h
src/Core/ECS/: Entity.cc  Entity.h  Event.cc  GameWorld.cpp  GameWorld.h  System.cc  System.h  quick.h
src/Core/ECS/help/: Pool.cc  Timer.cc  Timer.h
src/Core/ECS/tags/: TagsComponent.h
src/Core/JobSystem/: WorkerPool.cpp  WorkerPool.h  concurrent_queue.h  context.cc  context.h  delegate.h  job.cc  job.h  park.cc  park.h  predicate.h  queue.cc  queue.h  spinlock.h  tests.cc
src/Core/JobSystem/_detail/: job_impl.h  queue_impl.h  task.h
src/Core/imgui/: imgui_demo.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h
src/ECS/: Entity.cc  Entity.cpp  Entity.h  Event.cpp  Event.h  System.cc  System.cpp  System.h  config.h  quick.h
src/ECS/help/: NonCopyable.h  Pool.cc  Pool.h  Timer.cc  Timer.h
src/ECS/tags/: TagsComponent.h
src/Graphics/: FramePacket.h  GraphicsCore.cpp  GraphicsCore.h  GraphicsResourcesManager.cpp  GraphicsResourcesManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGeometry.h  Renderer.h  RenderingSystem.cpp  RenderingSystem.h  Types.cpp  Types.h  Vertex.h
src/Graphics/D3D12/: D3D12CommandAllocatorPool.cpp  D3D12CommandContext.cpp  D3D12CommandContext.h  D3D12CommandContextManager.cpp  D3D12CommandContextManager.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Device.cpp  D3D12Device.h  D3D12Renderer.cpp  D3D12Renderer.h  D3D12ResourceManager.cpp  D3D12ResourceManager.h  D3D12Types.h  DynamicDescriptorHeap.h  DynamicUploadHeap.cpp  DynamicUploadHeap.h  GPURingBuffer.cpp  WICTextureLoader12.h  d3dx12.h
src/Graphics/D3DCommon/: D3DHelpers.h
src/Renderer/: ConstantBufferStructs.h  FramePacket.h  IRenderer.cpp  IRenderer.h  IResourceManager.cpp  IResourceManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshGeometry.cpp  MeshGeometry.h  OBJModelLoader.cpp  OBJModelLoader.h  PointLight.h  Renderer.h  RenderingSystem.cpp  RenderingSystem.h  Texture.cpp  Texture.h  Types.h  Utils.cpp  Utils.h  Vertex.h
src/Renderer/D3D11/: D3D11CommandContext.cpp  D3D11CommandContext.h  D3D11GraphicsDevice.cpp  D3D11GraphicsDevice.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11ResourceManager.cpp  D3D11ResourceManager.h  D3D11ResourcesManager.cpp  D3D11ResourcesManager.h  D3D11Types.h
src/Renderer/D3D12/: D3D12CommandAllocatorPool.cpp  D3D12CommandAllocatorPool.h  D3D12CommandContext.cpp  D3D12CommandContext.h  D3D12CommandContextManager.cpp  D3D12CommandContextManager.h  D3D12CommandQueue.cpp  D3D12CommandQueue.h  D3D12Device.cpp  D3D12Device.h  D3D12Renderer.cpp  D3D12Renderer.h  D3D12ResourceManager.cpp  D3D12ResourceManager.h  D3D12Types.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  DynamicUploadHeap.cpp  DynamicUploadHeap.h  GPURingBuffer.cpp  GPURingBuffer.h  WICTextureLoader12.cpp
src/Renderer/D3DCommon/: D3DHelpers.h  RotateObjectSystem.cpp  RotateObjectSystem.h
